- Fixed issue of cropped map in contact
- Fixed footer

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -106,7 +106,6 @@ p{
 }
 .row{
     position: relative;
-    margin-top: -300px;
 }
 .container-fluid{
     padding-left: 30px;
@@ -129,7 +128,6 @@ p{
     width: 100%;
     bottom: 0;
     left: 0;
-    height: 300px;
 }
 .logo-wrapper{
     position: relative;
@@ -148,6 +146,7 @@ table{
     overflow-x: hidden;
     padding: 0;
     margin-top: 50px;
+    min-height: 4800px;
     .row:first-child{
         margin-top: 0;
         z-index: 1000;
@@ -274,7 +273,7 @@ table{
     position: relative;
     width: 100%;
     height: 500px;
-    top: -300px;
+    top: 0;
 }
 .footer-logo{
     position: absolute;
