--- a/src/assets/sass/responsive.scss
+++ b/src/assets/sass/responsive.scss
@@ -31,9 +31,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .top-margin{
-        padding-top: 150px;
-    }
+    
     .footer-logo{
         top: 50%;
         transform: translateY(-10%);
