--- a/src/styles.css
+++ b/src/styles.css
@@ -5960,8 +5960,7 @@ p {
   font-size: 24px; }
 
 .row {
-  position: relative;
-  margin-top: -300px; }
+  position: relative; }
 
 .container-fluid {
   padding-left: 30px;
@@ -5984,8 +5983,7 @@ p {
   position: relative;
   width: 100%;
   bottom: 0;
-  left: 0;
-  height: 300px; }
+  left: 0; }
 
 .logo-wrapper {
   position: relative;
@@ -6000,7 +5998,8 @@ table {
 .sections {
   overflow-x: hidden;
   padding: 0;
-  margin-top: 50px; }
+  margin-top: 50px;
+  min-height: 4800px; }
   .sections .row:first-child {
     margin-top: 0;
     z-index: 1000; }
@@ -6093,7 +6092,7 @@ table {
   position: relative;
   width: 100%;
   height: 500px;
-  top: -300px; }
+  top: 0; }
 
 .footer-logo {
   position: absolute;
@@ -6233,9 +6232,6 @@ table {
   .navigation {
     bottom: 38%; } }
 @media screen and (max-width: 1024px) {
-  .top-margin {
-    padding-top: 150px; }
-
   .footer-logo {
     top: 50%;
     -webkit-transform: translateY(-10%);
